(chore): rename toasters to popovers closes #2774

--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -6,7 +6,7 @@
           for="toasterNotifications"
           class="m-form__customInputWrapper__checkbox"
           i18n
-          >Enable toaster notifications
+          >Enable notification popovers
           <input
             type="checkbox"
             id="toasterNotifications"
@@ -27,7 +27,7 @@
       [saving]="inProgress"
       (click)="submit()"
     >
-      Update Toaster Preference
+      Update Popover Preference
     </m-shadowboxSubmitButton>
   </div>
 </form>
