(feat): Channel brief (desktop)

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <div m-pageLayout__pane="right">
-    <!-- Bio -->
+  <div class="m-channelFeed__sidebar" m-pageLayout__pane="right">
+    <m-channelAbout__brief></m-channelAbout__brief>
   </div>
 </div>
