(fix): Bio display issues

--- a/src/app/common/read-more/button.component.scss
+++ b/src/app/common/read-more/button.component.scss
@@ -52,5 +52,6 @@
     rgba($backgroundColor, 0) 0%,
     rgba($backgroundColor, 1) 50%
   );
+  transform: translateZ(0) translateY(1px);
   @content;
 }
