--- a/src/app/modules/channels/v2/about/brief.component.scss
+++ b/src/app/modules/channels/v2/about/brief.component.scss
@@ -27,6 +27,35 @@
     }
   }
 
+  @media screen and (max-width: $layoutMin3ColWidth) {
+    .m-channelAboutBrief__stats {
+      justify-content: flex-start;
+      flex-wrap: wrap;
+    }
+
+    .m-channelAboutBriefStats__item {
+      &::after {
+        content: ' \00b7\ ';
+        white-space: pre;
+      }
+
+      &:last-child::after {
+        content: '';
+      }
+
+      > * + * {
+        margin-left: 0.35em;
+      }
+    }
+
+    .m-channelAboutBriefStatsItem__label,
+    .m-channelAboutBriefStatsItem__value {
+      display: inline-block;
+      font-size: 14px;
+      line-height: 19px;
+    }
+  }
+
   .m-channelAboutBrief__location {
     display: flex;
     flex-direction: row;
