--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -1,1 +1,31 @@
-<p>config works!</p>
+<!-- <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
+  <div class="m-form__fieldsContainer">
+    <div class="m-form__field--checkbox stretchedField">
+      <div class="m-form__row--label">
+        <div class="m-settingsV2__headerLabel">New YouTube Videos</div>
+      </div>
+      <div class="m-form__row--input">
+        <div class="m-form__field--checkbox">
+          <div class="m-form__row--input">
+            <label
+              for="autoTransfer"
+              class="m-form__customInputWrapper__checkbox"
+              i18n
+              >Automatically transfer newly added YouTube videos across to Minds
+              <input
+                type="checkbox"
+                id="autoTransfer"
+                name="autoTransfer"
+                formControlName="autoTransfer"
+                class="form-control"
+                data-minds="autoTransfer"
+                [readonly]="inProgress || !init"
+              />
+              <span class="m-form__customInput__checkbox"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</form> -->
