--- a/src/app/modules/media/youtube-migration/dashboard/dashboard.component.html
+++ b/src/app/modules/media/youtube-migration/dashboard/dashboard.component.html
@@ -1,1 +1,28 @@
-<p>dashboard works!</p>
+<div>
+  <i
+    class="ion-icon ion-social-youtube"
+    style="color: #FF0000; font-size:42px"
+  ></i
+  ><span class="m-settingsV2__headerLabel">Moonboot</span>
+</div>
+
+<div class="m-tabs__container">
+  <li class="m-tabs__tab">
+    <a routerLink="available" routerLinkActive="selected">
+      Available
+    </a>
+  </li>
+  <li class="m-tabs__tab">
+    <a routerLink="transferred" routerLinkActive="selected">
+      Transferred
+    </a>
+  </li>
+  <li class="m-tabs__tab">
+    <a routerLink="config" routerLinkActive="selected">
+      Config
+    </a>
+  </li>
+</div>
+<div class="m-youtubeMigrationDashboard__viewsContainer">
+  <router-outlet></router-outlet>
+</div>
