--- a/src/app/modules/media/youtube-migration/youtube-migration.component.html
+++ b/src/app/modules/media/youtube-migration/youtube-migration.component.html
@@ -1,2 +1,11 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <m-youtubeMigration__connect></m-youtubeMigration__connect>
+<div style="border-top:1px solid grey; padding: 16px 0;"></div>
+<m-youtubeMigration__dashboard></m-youtubeMigration__dashboard>
+<div style="border-top:1px solid grey;padding: 16px 0;"></div>
+<m-youtubeMigration__config></m-youtubeMigration__config>
+<div style="border-top:1px solid grey;padding: 16px 0;"></div>
+<m-youtubeMigration__unmigratedVideos></m-youtubeMigration__unmigratedVideos>
+<div style="border-top:1px solid grey;padding: 16px 0;"></div>
+<m-youtubeMigration__migratedVideos></m-youtubeMigration__migratedVideos>
+<div style="border-top:1px solid grey;padding: 16px 0;"></div>
