Toast notification redesign

--- a/src/app/common/components/form-toast/form-toast.component.html
+++ b/src/app/common/components/form-toast/form-toast.component.html
@@ -2,35 +2,28 @@
   <ng-container *ngFor="let toast of toasts; let i = index">
     <div
       class="m-formToast__wrapper"
-      [ngClass]="{ dismissed: toast.dismissed }"
+      [@fader]="toast.dismissed ? 'dismissed' : 'active'"
     >
-      <i
-        class="material-icons m-formToast__icon--success"
-        *ngIf="toast.type === 'success'"
-        >check</i
-      >
-      <i
-        class="material-icons m-formToast__icon--error"
-        *ngIf="toast.type === 'error'"
-        >warning</i
-      >
-      <i
-        class="material-icons m-formToast__icon--warning"
-        *ngIf="toast.type === 'warning'"
-        >warning</i
-      >
-      <i
-        class="material-icons m-formToast__icon--info"
-        *ngIf="toast.type === 'info'"
-      ></i>
+      <div [ngClass]="['m-formToast__iconWrapper--' + toast.type]">
+        <i class="material-icons">
+          <ng-container *ngIf="toast.type === 'success'">check</ng-container>
+          <ng-container *ngIf="toast.type === 'error'">report</ng-container>
+          <ng-container *ngIf="toast.type === 'info'"
+            >error_outline</ng-container
+          >
+          <ng-container *ngIf="toast.type === 'warning'">warning</ng-container>
+        </i>
+      </div>
       <p i18n>{{ toast.message }}</p>
-      <div class="m-formToast__iconWrapper">
-        <i
-          class="material-icons m-formToast__icon--close"
-          (click)="toast.dismissed = true"
-          >clear</i
-        >
+      <div class="m-formToast__iconWrapper--close">
+        <i class="material-icons" (click)="dismiss(i)">clear</i>
       </div>
     </div>
+    <!-- The spacer replaces margin-bottom b/c smoother animation -->
+    <div
+      class="m-formToast__spacer"
+      [@fader]="toast.dismissed ? 'dismissed' : 'active'"
+    ></div>
   </ng-container>
+  <div class="m-formToastContainer__spacer"></div>
 </div>
