--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -28,7 +28,9 @@
               <i class="material-icons">arrow_back</i><span>Back</span>
             </a>
           </div>
-          <div class="m-settingsV2__headerLabel">{{ routeData.title }}</div>
+          <div class="m-settingsV2__headerLabel">
+            {{ routeData.title }}
+          </div>
         </div>
         <div class="m-settingsV2__viewWrapper">
           <div class="m-settingsV2__desc" *ngIf="routeData?.description">
@@ -40,6 +42,5 @@
         </div>
       </div>
     </ng-container>
-    <!-- <div class="m-settingsV2__secondarySpacer"></div> -->
   </div>
 </div>
