--- a/src/app/common/components/form-toast/form-toast.component.scss
+++ b/src/app/common/components/form-toast/form-toast.component.scss
@@ -1,100 +1,105 @@
+// Not using color themes mix-in because everything
+// is the same in both light mode and dark mode
 m-formToast {
+  display: block;
   position: fixed;
-  bottom: 40px;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
   max-width: 522px;
   width: 60%;
-  transition: all 0.3s ease;
 }
 .m-formToast__toastsContainer {
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-end;
 }
+.m-formToastContainer__spacer {
+  height: 24px;
+}
 .m-formToast__wrapper {
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   width: 100%;
-  font-size: 15px;
-  line-height: 20px;
-  padding: 13px;
-  margin-bottom: 16px;
-  display: flex;
-  opacity: 1;
-  animation-name: fadeIn;
-  animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
-  animation-duration: 0.4s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  @include m-theme() {
-    color: themed($m-grey-600);
-    background-color: themed($m-white);
-    box-shadow: 0 0 15px 0 rgba(themed($m-black), 0.2);
-  }
-  &.dismissed {
-    display: none;
+  border-radius: 2px;
+  opacity: 0.85;
+  transition: all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) !important;
+  color: #7d7d82;
+  background-color: #fff;
+  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  max-height: 500px;
+  &:hover {
+    opacity: 1;
   }
   p {
+    font-size: 17px;
+    line-height: 19px;
     flex-grow: 1;
-    margin: 0;
+    margin: 20px 18px 20px 22px;
     word-wrap: break-word;
     overflow: hidden;
   }
 }
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.m-formToast__spacer {
+  height: 16px;
 }
 
-[class*='m-formToast__icon--'] {
-  margin-right: 10px;
-}
-.m-formToast__icon--success {
-  @include m-theme() {
-    color: themed($m-green-dark);
+[class*='m-formToast__iconWrapper--'] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  i {
+    font-size: 20px;
+  }
+  &:not(.m-formToast__iconWrapper--close) {
+    align-self: stretch;
+    min-width: 58px;
+    i {
+      color: #fff;
+    }
   }
 }
-.m-formToast__icon--error {
-  @include m-theme() {
-    color: themed($m-red);
-  }
+.m-formToast__iconWrapper--success {
+  background-color: #59a05e;
 }
-.m-formToast__icon--warning {
-  @include m-theme() {
-    color: themed($m-amber-dark);
-  }
+.m-formToast__iconWrapper--error {
+  background-color: #ca4a34;
 }
-.m-formToast__icon--info {
-  margin-right: 14px;
+.m-formToast__iconWrapper--warning {
+  background-color: #d49538;
 }
-.m-formToast__icon--close {
+.m-formToast__iconWrapper--info {
+  background-color: #5a91bb;
+}
+.m-formToast__iconWrapper--close {
   cursor: pointer;
-  transition: all 0.2s ease-out;
-  @include m-theme() {
-    color: themed($m-grey-300);
-  }
+  align-self: start;
+  margin: 18.5px 19px 0 0;
+  transition: all 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
   &:hover {
-    transform: scale(1.2);
-    @include m-theme() {
-      color: themed($m-grey-100);
-    }
+    transform: scale(1.1);
   }
-  &:active {
-    @include m-theme() {
-      color: themed($m-grey-400);
-    }
+  i {
+    opacity: 0.8;
   }
 }
 
 @media screen and (max-width: $max-mobile) {
   m-formToast {
-    bottom: 48px;
-    width: 75%;
+    width: 100%;
+    bottom: 0;
+  }
+  .m-formToast__wrapper {
+    border-radius: 0;
+  }
+  .m-formToast__spacer {
+    height: 8;
+  }
+
+  .m-formToastContainer__spacer {
+    height: 0px;
   }
 }
