--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -233,7 +233,7 @@ m-settingsV2 {
       }
     }
 
-    // TODOOJM remove after cleanup of transplant components
+    // TODOOJM remove after cleanup of 2fa component
     .m-settings--section {
       input {
         width: 100%;
