(feat): Shop sidebar

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -37,5 +37,6 @@
 
   <div class="m-channelFeed__sidebar" m-pageLayout__pane="right">
     <m-channelAbout__brief></m-channelAbout__brief>
+    <m-channelShop__brief></m-channelShop__brief>
   </div>
 </div>
