(chore): Disable See All link in channel shop sidebar

--- a/src/app/modules/channels/v2/shop/brief.component.html
+++ b/src/app/modules/channels/v2/shop/brief.component.html
@@ -5,6 +5,7 @@
   <div class="m-channelShopBrief__title">
     <span class="m-channelShopBriefTitle__text">Shop</span>
     <a
+      *ngIf="false"
       class="m-channelShopBriefTitle__seeAll"
       [routerLink]="['/', channel.username$ | async, 'shop']"
       i18n
