(chore): Hide shop if there are no items

--- a/src/app/modules/channels/v2/shop/brief.component.html
+++ b/src/app/modules/channels/v2/shop/brief.component.html
@@ -1,6 +1,7 @@
 <div
   *ngIf="shop.wireRewards$ | async as wireRewards"
   class="m-channelShop__brief"
+  [hidden]="wireRewards.count === 0"
 >
   <div class="m-channelShopBrief__title">
     <span class="m-channelShopBriefTitle__text">Shop</span>
