--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -47,11 +47,13 @@
     </ng-template>
   </ng-container>
 
-  <ng-container *mIfBrowser>
-    <m-newsfeed--boost-rotator
-      interval="3"
-      *ngIf="showBoostRotator"
-    ></m-newsfeed--boost-rotator>
+  <ng-container *mIfFeature="'boost-rotator'">
+    <ng-container *mIfBrowser>
+      <m-newsfeed--boost-rotator
+        interval="3"
+        *ngIf="showBoostRotator"
+      ></m-newsfeed--boost-rotator>
+    </ng-container>
   </ng-container>
 
   <ng-container
