--- a/src/app/modules/composer/components/text-area/text-area.component.html
+++ b/src/app/modules/composer/components/text-area/text-area.component.html
@@ -1,47 +1,78 @@
 <div class="m-composer__textArea">
-  <div class="m-composerTextarea__title" *ngIf="attachment$ | async">
-    <input
-      type="text"
-      placeholder="Title"
-      i18n-placeholder
-      [ngModel]="(title$ | async) || ''"
-      [hidden]="(title$ | async) === null"
-      [disabled]="isPosting$ | async"
-      (ngModelChange)="onTitleChange($event)"
-      data-cy="composer-activity-title"
-      #titleInput
-    />
-
-    <div
-      class="m-composerTextareaTitle__toggle"
-      (click)="toggleTitle()"
-      [hidden]="isPosting$ | async"
-      data-cy="composer-activity-title"
-    >
-      <m-icon
-        [iconId]="
-          (title$ | async) === null
-            ? 'add_circle_outline'
-            : 'remove_circle_outline'
+  <ng-container *ngIf="(service.contentType$ | async) !== 'blog'">
+    <div class="m-composerTextarea__title" *ngIf="attachment$ | async">
+      <input
+        type="text"
+        placeholder="Title"
+        i18n-placeholder
+        [ngModel]="(title$ | async) || ''"
+        [hidden]="
+          (title$ | async) === null && (service.contentType$ | async) !== 'blog'
         "
-        sizeFactor="20"
-      ></m-icon>
-      <span i18n>Title</span>
-    </div>
-  </div>
+        [disabled]="isPosting$ | async"
+        (ngModelChange)="onTitleChange($event)"
+        data-cy="composer-activity-title"
+        #titleInput
+      />
 
-  <textarea
-    class="m-composerTextarea__message"
-    placeholder="Speak your mind..."
-    i18n-placeholder
-    [id]="inputId"
-    [ngModel]="message$ | async"
-    [disabled]="isPosting$ | async"
-    (ngModelChange)="onMessageChange($event)"
-    (filePaste)="filePaste.emit($event)"
-    m-attachment-paste
-    tabindex="0"
-    data-cy="composer-textarea"
-    #messageInput
-  ></textarea>
+      <div
+        class="m-composerTextareaTitle__toggle"
+        (click)="toggleTitle()"
+        [hidden]="isPosting$ | async"
+        data-cy="composer-activity-title"
+        *ngIf="(service.contentType$ | async) !== 'blog'"
+      >
+        <m-icon
+          [iconId]="
+            (title$ | async) === null
+              ? 'add_circle_outline'
+              : 'remove_circle_outline'
+          "
+          sizeFactor="20"
+        ></m-icon>
+        <span i18n>Title</span>
+      </div>
+    </div>
+
+    <textarea
+      class="m-composerTextarea__message"
+      placeholder="Speak your mind..."
+      i18n-placeholder
+      [id]="inputId"
+      [ngModel]="message$ | async"
+      [disabled]="isPosting$ | async"
+      (ngModelChange)="onMessageChange($event)"
+      (filePaste)="filePaste.emit($event)"
+      m-attachment-paste
+      tabindex="0"
+      data-cy="composer-textarea"
+      #messageInput
+    ></textarea>
+  </ng-container>
+  <ng-container *ngIf="(service.contentType$ | async) === 'blog'">
+    <div
+      class="m-composerTextarea__title m-composerTextarea__title--blog"
+      id="blogWrapper"
+    >
+      <input
+        type="text"
+        placeholder="Title"
+        i18n-placeholder
+        [ngModel]="(title$ | async) || ''"
+        [hidden]="
+          (title$ | async) === null && (service.contentType$ | async) !== 'blog'
+        "
+        [disabled]="isPosting$ | async"
+        (ngModelChange)="onTitleChange($event)"
+        data-cy="composer-activity-title"
+        #titleInput
+      />
+    </div>
+    <m-blog__editor
+      *ngIf="(service.contentType$ | async) === 'blog'"
+      (contentChanged)="onMessageChange($event)"
+      [content]="'hi'"
+      #messageInput
+    ></m-blog__editor>
+  </ng-container>
 </div>
