--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.scss
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.scss
@@ -3,7 +3,7 @@ m-newsfeed--boost-rotator {
 }
 
 .m-boost-rotator-item {
-  transition: opacity 0.5s ease;
+  transition: opacity 1.5s ease;
   opacity: 1;
 
   &[hidden] {
@@ -210,4 +210,11 @@ m-newsfeed--boost-rotator {
 .m-newsfeed__boostRotator {
   width: 100%;
   margin-bottom: 20px; // Make 20px constant
+  position: relative;
+
+  m-activity {
+    position: absolute;
+    top: 0;
+    overflow: hidden;
+  }
 }
