--- a/src/app/modules/channels/v2/about/about.component.scss
+++ b/src/app/modules/channels/v2/about/about.component.scss
@@ -26,9 +26,47 @@
 
     .m-channelAbout__field {
       width: 50%;
+      margin: 0 0 20px;
 
       &.m-channelAbout__field--fullWidth {
         width: 100%;
+      }
+    }
+
+    .m-channelAboutField__label {
+      font-size: 15px;
+      line-height: 19px;
+      margin: 0 0 6px;
+
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+    }
+
+    .m-channelAboutField__content {
+      font-size: 15px;
+      line-height: 19px;
+
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+
+      &.m-channelAboutField__content--preserveBlanks {
+        white-space: pre-line;
+        word-break: break-word;
+      }
+
+      a {
+        font: inherit !important;
+        color: inherit !important;
+        text-decoration: inherit !important;
+      }
+    }
+
+    .m-channel--badges {
+      i.material-icons {
+        padding: 0 15px 0 0;
+        font-size: 16px;
       }
     }
   }
