--- a/src/app/modules/composer/components/text-area/text-area.component.html
+++ b/src/app/modules/composer/components/text-area/text-area.component.html
@@ -53,6 +53,7 @@
     </div>
 
     <div class="m-composer__textArea--blog" *ngSwitchCase="'blog'">
+      <m-composer__banner></m-composer__banner>
       <div
         class="m-composerTextarea__title m-composerTextarea__title--blog"
         id="blogWrapper"
