(fix): make videos inline for old activities

--- a/src/app/modules/legacy/components/cards/cards.scss
+++ b/src/app/modules/legacy/components/cards/cards.scss
@@ -447,6 +447,9 @@ minds-activity-preview {
   }
 
   .item-image-video {
+    m-videoPlayer {
+      display: inline;
+    }
     video {
       width: 100%;
       height: auto;
