Moved meta button to dropdown

--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -9,6 +9,7 @@
     <m-composer__titleBar
       [inputId]="textareaId"
       (onCreateBlog)="createBlog()"
+      (onCreatePost)="createPost()"
     ></m-composer__titleBar>
 
     <m-composer__preview
